syntax = "proto3";
package common.crypto;

// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/sonrhq/core/types/crypto";

// PubKey represents a public key in bytes format.
message PubKey {
  bytes key = 1;
  string key_type = 2;
}
